--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="out js-bigimg">
 	<div class="game">NAME OF GAME</div>
 	<div class="coming">COMING SOON</div>
-	<div class="contact"><span>Contact:</span> info@mediaappscorp.com</div>
+	<div class="contact"><span>Contact:</span> <a href="#">info@mediaappscorp.com</a></div>
 </div>
 <!-- / .out -->
 
